# multibg-sway

./: .editorconfig  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PKGBUILD  PKGBUILD.in  README.md
scripts/: ipc.bt  ipc.out.txt  pkgbuild.sh
src/: cli.rs  compositors.rs  image.rs  main.rs  poll.rs  signal.rs  sway.rs  wayland.rs
src/compositors/: hyprland.rs  niri.rs  sway.rs
