[package]
name = "multibg-sway"
version = "0.1.5"
authors = ["Gergő Sályi <salyigergo94@gmail.com>"]
edition = "2021"
description = "Set a different wallpaper for the background of each Sway workspace"
readme = "README.md"
homepage = "https://github.com/gergo-salyi/multibg-sway"
repository = "https://github.com/gergo-salyi/multibg-sway"
license = "MIT OR Apache-2.0"
keywords = ["wallpaper", "background", "desktop", "wayland", "sway"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["PKGBUILD"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
fast_image_resize = "2.7.2"
image = "0.24.6"
log = "0.4.17"
mio = { version = "0.8.6", features = ["os-ext", "os-poll"] }
swayipc = "3.0.1"

[dependencies.smithay-client-toolkit]
version = "0.18.0"
default-features = false
