[package]
name = "multibg-sway"
version = "0.1.8"
authors = ["Gergő Sályi <salyigergo94@gmail.com>"]
edition = "2021"
description = "Set a different wallpaper for the background of each Sway workspace"
readme = "README.md"
homepage = "https://github.com/gergo-salyi/multibg-sway"
repository = "https://github.com/gergo-salyi/multibg-sway"
license = "MIT OR Apache-2.0"
keywords = ["wallpaper", "background", "desktop", "wayland", "sway"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["PKGBUILD"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
fast_image_resize = "4.2.1"
image = "0.25.0"
log = "0.4.21"
mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
swayipc = "3.0.2"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
