[package]
name = "multibg-sway"
version = "0.1.10"
authors = ["Gergő Sályi <salyigergo94@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Set a different wallpaper for the background of each Sway workspace"
readme = "README.md"
homepage = "https://github.com/gergo-salyi/multibg-sway"
repository = "https://github.com/gergo-salyi/multibg-sway"
license = "MIT OR Apache-2.0"
keywords = ["wallpaper", "background", "desktop", "wayland", "sway"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/PKGBUILD", "/scripts/"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
fast_image_resize = "5.0.0"
libc = "0.2.171"
log = "0.4.21"
rustix = {version = "0.38.44", features = ["event", "pipe"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swayipc = "3.0.2"
niri-ipc = "=25.2.0"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"]

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false

[features]
avif = ["image/avif-native"]
